[gd_scene load_steps=4 format=3 uid="uid://bt4f4wcpotw20"]

[ext_resource type="FontFile" path="res://panel_select/header_font.tres" id="1"]
[ext_resource type="FontFile" path="res://panel_select/earthbound_header_font.tres" id="2"]
[ext_resource type="Script" path="res://panel_select/score_header.gd" id="3"]

[node name="Header" type="Control"]
layout_mode = 3
anchor_right = 1.0
anchor_bottom = 0.075
script = ExtResource("3")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/separation = 1

[node name="Control2" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ContestantName" type="Label" parent="VBoxContainer/Control2"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 14
text = "JERRY||"

[node name="World" type="Label" parent="VBoxContainer/Control2"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_fonts/font = ExtResource("1")
theme_override_font_sizes/font_size = 8
text = "WORLD"
horizontal_alignment = 1

[node name="TimeLabel" type="Label" parent="VBoxContainer/Control2"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_fonts/font = ExtResource("1")
theme_override_font_sizes/font_size = 8
text = "TIMER"
horizontal_alignment = 2

[node name="Control3" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Score" type="Label" parent="VBoxContainer/Control3"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_fonts/font = ExtResource("1")
theme_override_font_sizes/font_size = 8
text = "SCORE:239"

[node name="CategoryTitle" type="Label" parent="VBoxContainer/Control3"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_fonts/font = ExtResource("1")
theme_override_font_sizes/font_size = 8
text = "QUESTION NUMBER TEST"
horizontal_alignment = 1

[node name="TimerValue" type="Label" parent="VBoxContainer/Control3"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_fonts/font = ExtResource("1")
theme_override_font_sizes/font_size = 8
text = "X"
horizontal_alignment = 2

[node name="Timer" type="Timer" parent="."]
one_shot = true
